# q-octo

./: .gitignore  .gitmodules  README.md  cybergear.c  cybergear.h  cybergear_cn.c  embedded-code.sln
archive/: wifi_crash.cpp
cybergear_reference/: cybergear_cn.c
flatbuffers_schemas/: companion_rx.fbs  companion_rx_message.fbs  companion_tx.fbs  companion_tx_message.fbs  obc_crsf_frame.fbs  obc_drive.fbs  obc_tx_message.fbs  onboard_computer_rx.fbs  onboard_computer_rx_message.fbs  onboard_computer_tx.fbs  onboard_computer_tx_message.fbs  pico2_update.fbs  robot_state.fbs  schema.fbs  ws_robot.fbs  ws_update.fbs
src_batt_mon/: bat_mon_2.txt  bat_mon_3.txt  bat_mon_4_frames.txt  crc  crc.cpp  platformio.ini  rot.txt  sample5.txt
src_batt_mon/isolated/: CMakeLists.txt  main  uavcan.equipment.power.BatteryInfo.h
src_batt_mon/src/: cybergear_rotary_encoder.cpp  cybergear_rotary_encoder.h  main.cpp  uavcan.protocol.dynamic_node_id.Allocation.h
src_companion/: .gitignore  DHCP_SERVER_LICENSE  Makefile  README.md  dummyWebsocket.py  main.c  net.c  pack  platformio.ini  task_data_manager.c  task_data_manager.h  task_web_server.c  task_web_server.h
src_companion/include/: companion_rx_generated.h  companion_rx_message_generated.h  (+9 more)
src_onboard/: .gitignore  main.py
src_pico/: .gitignore  Makefile  README.md  main.cpp.crsf.txt  platformio.ini
src_rotary_encoders/: .gitignore  bat_mon_3 copy.txt  battery_mon.txt  debug_rotary_encoder.fbs  log.txt  main.py  platformio.ini  rot.txt  sample1.txt
src_rtos/: Makefile  blink.c  blink.h  lwipopts.h  packed_fs.c
(+201 files in other folders)
